--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
+  very_good_analysis: ^6.0.0
   flutter_test:
     sdk: flutter
 
